After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678796 - backend: fix incorrect property ID (referrer).
backend: fix incorrect property ID (referrer).
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: GStreamer backend
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: Maintainer alias for GStreamer component of Totem
Maintainer alias for GStreamer component of Totem
Depends on:
Blocks:
 
 
Reported: 2012-06-25 15:51 UTC by Gwenole Beauchesne
Modified: 2012-06-25 15:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
backend: fix incorrect property ID (referrer). (1.09 KB, patch)
2012-06-25 15:51 UTC, Gwenole Beauchesne
committed Details | Review

Description Gwenole Beauchesne 2012-06-25 15:51:44 UTC
Created attachment 217221 [details] [review]
backend: fix incorrect property ID (referrer).

Hi, this patch fixes a typo for PROP_REFERRER.
Comment 1 Bastien Nocera 2012-06-25 15:59:38 UTC
Attachment 217221 [details] pushed as 7451037 - backend: fix incorrect property ID (referrer).