backend: fix incorrect property ID (referrer).

Fix typo in PROP_REFERRER name.

https://bugzilla.gnome.org/show_bug.cgi?id=678796